@@ -3,6 +3,8 @@ DSV.pm
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -16,12 +18,12 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Text-DSV/00-use.t
-t/Text-DSV/01-version.t
-t/Text-DSV/02-pod_coverage.t
-t/Text-DSV/03-pod.t
-t/Text-DSV/04-new.t
-t/Text-DSV/05-parse.t
-t/Text-DSV/06-parse_line.t
-t/Text-DSV/07-serialize.t
-t/Text-DSV/08-serialize_line.t
+t/Text-DSV/01-use.t
+t/Text-DSV/02-version.t
+t/Text-DSV/03-new.t
+t/Text-DSV/04-parse.t
+t/Text-DSV/05-parse_line.t
+t/Text-DSV/06-serialize.t
+t/Text-DSV/07-serialize_line.t
+xt/Text-DSV/01-pod_coverage.t
+xt/Text-DSV/02-pod.t
