@@ -3,13 +3,9 @@ abstract: 'DSV parser and serializer.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
-  English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.05
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -25,6 +21,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   perl: 5.6.0
 resources:
